<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.vzaar.apiclient.sample.videoupload.VideoUploadView" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.vzaar.apiclient.sample.videoupload.VideoUploadActivity">

        <TextView
            android:id="@+id/videoUpload_success"
            style="@style/MessageBar.Success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="It was a success!" />

        <TextView
            android:id="@+id/videoUpload_error"
            style="@style/MessageBar.Error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoUpload_success"
            tools:text="There was an error" />


        <ProgressBar
            android:id="@+id/videoUpload_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="false"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoUpload_error" />

        <TextView
            android:id="@+id/videoUpload_progress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/title_upload_progress"
            app:layout_constraintBottom_toTopOf="@+id/videoUpload_progressBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/videoUpload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:onClick="@{() -> handler.onUploadButtonClick()}"
            android:src="@drawable/ic_add_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/videoUpload_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_video_upload_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoUpload_error"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/videoUpload_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="textShortMessage"
            app:layout_constraintLeft_toLeftOf="@+id/videoUpload_title_label"
            app:layout_constraintTop_toBottomOf="@+id/videoUpload_title_label"
            tools:ignore="LabelFor,RtlHardcoded" />

        <TextView
            android:id="@+id/videoUpload_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_video_upload_description"
            app:layout_constraintLeft_toLeftOf="@+id/videoUpload_title"
            app:layout_constraintTop_toBottomOf="@+id/videoUpload_title"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/videoUpload_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="textLongMessage"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="@+id/videoUpload_description_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoUpload_description_label"
            tools:ignore="LabelFor,RtlHardcoded" />


    </android.support.constraint.ConstraintLayout>
</layout>
